--- a/resources/tentative/complex-static-html/src/react-todomvc/public/layout.css
+++ b/resources/tentative/complex-static-html/src/react-todomvc/public/layout.css
@@ -8,7 +8,10 @@ body {
 }  
 
 .absolutely-positioned-element {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .todo-area{
